# erwa-example

./: .env  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/db/: mod.rs  schema.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
