[package]
name = "backend"
version = "0.1.0"
authors = ["sved"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
rocket = "0.4.5"
serde = { version = "1.0.117", features = ["derive"] }
mytodo = { path = ".." }
rocket_cors = { version = "0.5.2", default-features = false }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]